--- a/css/style.css
+++ b/css/style.css
@@ -3,6 +3,17 @@ body{
 	color: rgb(50,50,0);
 }
 
+.italic{
+	font-style: italic;
+	font-weight: bold;
+
+}
+
+#avatar{
+	width: 200px;
+	border:5px solid #EBEBEB;
+}
+
 h1, h2, h3{
 	font-family: 'Montserrat', sans-serif ;
 		font-weight: bold;
